--- a/exchangeApp/package.json
+++ b/exchangeApp/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.3.4",
     "deprecated-react-native-prop-types": "^4.1.0",
     "formik": "^2.2.9",
+    "lottie-react-native": "^5.1.6",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-alert-notification": "^0.3.4",
